remove deprecated thread API